terminado maestro esta vez creo qeu de verdad
